new: home page badges

--- a/read_comics/templates/base.html
+++ b/read_comics/templates/base.html
@@ -74,7 +74,7 @@
             <ol class="breadcrumb p-0 mb-0">
               <li class="breadcrumb-item {% if not breadcrumb %}active{% endif %}">
                 {% if breadcrumb %}
-                  <a href="{% url "home" %}"><i class="fad fa-home font-medium-2" aria-hidden="true"></i></a>
+                  <a href="{% url "pages:home" %}"><i class="fad fa-home font-medium-2" aria-hidden="true"></i></a>
                 {% else %}
                   <i class="fad fa-home font-medium-2" aria-hidden="true"></i>
                 {% endif %}
