--- a/read_comics/templates/blocks/layout/main_menu/main_menu.html
+++ b/read_comics/templates/blocks/layout/main_menu/main_menu.html
@@ -2,7 +2,7 @@
 <div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
   <div class="navbar-header">
     <ul class="nav navbar-nav flex-row">
-      <li class="nav-item mr-auto"><a class="navbar-brand" href="{% url "home" %}">
+      <li class="nav-item mr-auto"><a class="navbar-brand" href="{% url "pages:home" %}">
         <div class="brand-logo"></div>
         <h2 class="brand-text mb-0">Read-Comics.Net</h2>
       </a></li>
