--- a/read_comics/pages/templates/pages/home.html
+++ b/read_comics/pages/templates/pages/home.html
@@ -5,7 +5,7 @@
 {% block page_content %}
   <section id="widgets-Statistics">
 
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-xl-3 col-sm-6">
         <div class="card text-center div-link">
           <a class="div-default-link" href="{% url "issues:list" %}"></a>
@@ -13,8 +13,8 @@
             <div class="badge-circle badge-circle-lg badge-circle-light-info mx-auto my-1">
               <i class="fad fa-book-open"></i>
             </div>
-            <p class="text-muted mb-0 line-ellipsis">Issue{{ issues_count|pluralize }}</p>
-            <h2 class="mb-0">{{ issues_count }}</h2>
+            <p class="text-muted mb-0 line-ellipsis">Issue{{ matched_stats.issues_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.issues_count }}</h2>
           </div>
         </div>
       </div>
@@ -25,8 +25,8 @@
             <div class="badge-circle badge-circle-lg badge-circle-light-warning mx-auto my-1">
               <i class="fad fa-building"></i>
             </div>
-            <p class="text-muted mb-0 line-ellipsis">Publisher{{ publishers_count|pluralize }}</p>
-            <h2 class="mb-0">{{ publishers_count }}</h2>
+            <p class="text-muted mb-0 line-ellipsis">Publisher{{ matched_stats.publishers_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.publishers_count }}</h2>
           </div>
         </div>
       </div>
@@ -37,8 +37,8 @@
             <div class="badge-circle badge-circle-lg badge-circle-light-danger mx-auto my-1">
               <i class="fad fa-books"></i>
             </div>
-            <p class="text-muted mb-0 line-ellipsis">Story Arc{{ story_arcs_count|pluralize }}</p>
-            <h2 class="mb-0">{{ story_arcs_count }}</h2>
+            <p class="text-muted mb-0 line-ellipsis">Story Arc{{ matched_stats.story_arcs_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.story_arcs_count }}</h2>
           </div>
         </div>
       </div>
@@ -49,8 +49,86 @@
             <div class="badge-circle badge-circle-lg badge-circle-light-primary mx-auto my-1">
               <i class="fad fa-book-spells"></i>
             </div>
-            <p class="text-muted mb-0 line-ellipsis">Volume{{ volumes_count|pluralize }}</p>
-            <h2 class="mb-0">{{ volumes_count }}</h2>
+            <p class="text-muted mb-0 line-ellipsis">Volume{{ matched_stats.volumes_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.volumes_count }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6">
+        <div class="card text-center div-link">
+          <a class="div-default-link" href="{% url "characters:list" %}"></a>
+          <div class="card-body">
+            <div class="badge-circle badge-circle-lg badge-circle-light-info mx-auto my-1">
+              <i class="fad fa-bat"></i>
+            </div>
+            <p class="text-muted mb-0 line-ellipsis">Character{{ matched_stats.characters_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.characters_count }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6">
+        <div class="card text-center div-link">
+          <a class="div-default-link" href="{% url "teams:list" %}"></a>
+          <div class="card-body">
+            <div class="badge-circle badge-circle-lg badge-circle-light-warning mx-auto my-1">
+              <i class="fad fa-users"></i>
+            </div>
+            <p class="text-muted mb-0 line-ellipsis">Team{{ matched_stats.teams_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.teams_count }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6">
+        <div class="card text-center div-link">
+          <a class="div-default-link" href="{% url "locations:list" %}"></a>
+          <div class="card-body">
+            <div class="badge-circle badge-circle-lg badge-circle-light-danger mx-auto my-1">
+              <i class="fad fa-map-marker-alt"></i>
+            </div>
+            <p class="text-muted mb-0 line-ellipsis">Location{{ matched_stats.locations_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.locations_count }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6">
+        <div class="card text-center div-link">
+          <a class="div-default-link" href="{% url "objects:list" %}"></a>
+          <div class="card-body">
+            <div class="badge-circle badge-circle-lg badge-circle-light-primary mx-auto my-1">
+              <i class="fad fa-swords"></i>
+            </div>
+            <p class="text-muted mb-0 line-ellipsis">Object{{ matched_stats.objects_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.objects_count }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6">
+        <div class="card text-center div-link">
+          <a class="div-default-link" href="{% url "concepts:list" %}"></a>
+          <div class="card-body">
+            <div class="badge-circle badge-circle-lg badge-circle-light-info mx-auto my-1">
+              <i class="fad fa-brain"></i>
+            </div>
+            <p class="text-muted mb-0 line-ellipsis">Concept{{ matched_stats.concepts_count|pluralize }}</p>
+            <h2 class="mb-0">{{ matched_stats.concepts_count }}</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6">
+        <div class="card text-center div-link">
+          <a class="div-default-link" href="{% url "people:list" %}"></a>
+          <div class="card-body">
+            <div class="badge-circle badge-circle-lg badge-circle-light-warning mx-auto my-1">
+              <i class="fad fa-people-carry"></i>
+            </div>
+            <p class="text-muted mb-0 line-ellipsis">
+              {% if  matched_stats.people_count > 1 %}
+                People
+              {% else %}
+                Person
+              {% endif %}
+            </p>
+            <h2 class="mb-0">{{ matched_stats.people_count }}</h2>
           </div>
         </div>
       </div>
